<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/Main_toolbar"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:fitsSystemWindows="true"
            android:contentInsetLeft="0dp"
            android:contentInsetRight="0dp"
            android:elevation="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.Toolbar>


        <!--<View-->
            <!--android:id="@+id/div_tab_bar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="2px"-->
            <!--android:layout_above="@id/rg_tab_bar"-->
            <!--android:background="@color/bg_whith" />-->

        <android.support.v4.view.ViewPager
            android:id="@+id/book_vpager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

        </android.support.v4.view.ViewPager>

        <RadioGroup
            android:id="@+id/rg_tab_bar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:background="@color/bg_whith"
            android:elevation="3dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb_home"
                style="@style/tab_menu_item"
                android:drawableTop="@drawable/tab_menu_home"
                android:text="@string/tab_menu_home" />

            <RadioButton
                android:id="@+id/rb_classify"
                style="@style/tab_menu_item"
                android:drawableTop="@drawable/tab_menu_classify"
                android:text="@string/tab_menu_class" />

            <RadioButton
                android:id="@+id/rb_love"
                style="@style/tab_menu_item"
                android:drawableTop="@drawable/tab_menu_love"
                android:text="@string/tab_menu_love" />

            <RadioButton
                android:id="@+id/rb_user"
                style="@style/tab_menu_item"
                android:drawableTop="@drawable/tab_menu_user"
                android:text="@string/tab_menu_user"/>
        </RadioGroup>
    </LinearLayout>
</RelativeLayout>
