<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.ed2k.driverbook.activity.SignUpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/signup_toolbar"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:fitsSystemWindows="true"
            android:contentInsetLeft="0dp"
            android:contentInsetRight="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.Toolbar>
        <LinearLayout
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:id="@+id/signup_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/login_name"
                android:maxLength="16"
                android:inputType="text"
                />
            <EditText
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/login_password"
                android:maxLength="16"
                android:inputType="textPassword"/>
            <EditText
                android:id="@+id/signup_repassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/login_password"
                android:maxLength="16"
                android:inputType="textPassword"/>
            <Button
                android:id="@+id/signup_signup"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                android:background="@drawable/login_bt_shape"
                android:text="@string/signup_signup"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
